Avoid wrapping sections on parsoid
Bug: T374578

--- a/resources/mobile.init.styles/main.less
+++ b/resources/mobile.init.styles/main.less
@@ -2,7 +2,7 @@
 @import 'mobile.less';
 @import 'icons.less';
 
-@selector-parsoid-top-heading: ~'.mw-parser-output > section > section > .mw-heading';
+@selector-parsoid-top-heading: ~'.mw-parser-output > section > .mw-heading';
 
 .client-js {
 	/* For Parsoid HTML hide the div until the hidden attribute has been added. */
